# hoop_detection

./: .gitignore  CMakeLists.txt  README.md  camera_calibrator.cpp  camera_calibrator.hpp  camera_params.yml  circle_detector.cpp  circle_detector.hpp  circle_detector.py  hik_camera.cpp  hoop_cpp.code-workspace  hoop_detector.cpp  hoop_detector.hpp  hoop_detector.py  hsv_tuner.py  image_saver.cpp  image_saver.hpp  main.cpp
validation/: hoop.py  test.py
